tests/machine/x/zig/record_assign.error
Error on line 9: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/record_assign.zig:9:8: error: function parameter shadows declaration of 'c'
/workspace/mochi/tests/machine/x/zig/record_assign.zig:7:1: note: declared here

8: 
9: fn inc(c: i32) void {
10:     c = (c.n + @as(i32, @intCast(1)));
